# Data-Masker-Smart-Data-Redactor

./: .gitignore  .pre-commit-config.yaml  .tokens.json  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
data_masker/: cli.py  detectors.py  io_utils.py  masker.py  pii_patterns.py  rules.py  token_store.py
sample_data/: people.csv
tests/: test_cli.py  test_detector_toggles.py  test_ipv6_iban.py  test_masker.py
